--- a/templates/engineering.html
+++ b/templates/engineering.html
@@ -91,13 +91,13 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOneCur">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCur" aria-expanded="true" aria-controls="collapseOneCur">
-            Nan
+            Not Available
         </button>
       </h2>
       <div id="collapseOneCur" class="accordion-collapse collapse" aria-labelledby="headingOneCur" data-bs-parent="#accordionExampleCur">
         <div class="accordion-body">
             <div class="list-group w-auto">
-                Nan
+                Not Available
             </div>
         </div>
       </div>
@@ -109,13 +109,13 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOneCar">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOneCar" aria-expanded="true" aria-controls="collapseOneCar">
-            Nan
+            Not Available
         </button>
       </h2>
-      <div id="collapseOneCur" class="accordion-collapse collapse" aria-labelledby="headingOneCar" data-bs-parent="#accordionExampleCar">
+      <div id="collapseOneCar" class="accordion-collapse collapse" aria-labelledby="headingOneCar" data-bs-parent="#accordionExampleCar">
         <div class="accordion-body">
             <div class="list-group w-auto">
-                Nan
+                Not Available
             </div>
         </div>
       </div>
